# rusty-budgets

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  Dockerfile  README.md  RUSTOVER_RUN_CONFIG.md  bacon.toml  better-budgeting.md  bork  budget-planning.md  data.json  data.old.json  database.sqlite  docker-compose.yml  example.env  package-lock.json
.zed/: debug.json  settings.json
api/: .gitignore  Cargo.toml
api/src/: api_error.rs  cqrs.rs  db.rs  holidays.rs  lib.rs  main.rs  pg_models.rs  runtime.rs  time_delta.rs  welds_docs.md
api/src/cqrs/: bank_transaction.rs  budget.rs  budget_item.rs  budgets.rs  domain_events.rs  framework.rs  macros.rs  mod.rs  money.rs  runtime.rs
api/src/errors/: mod.rs
api/src/events/: actual_added.rs  actual_funds_adjusted.rs  actual_funds_reallocated.rs  actual_modified.rs  allocation_created.rs  allocation_deleted.rs  bank_account_created.rs  budget_created.rs  item_added.rs  item_buffer_set.rs  item_funds_adjusted.rs  item_funds_reallocated.rs  item_modified.rs  mod.rs  period.rs  plan.rs  rule_added.rs  rule_deleted.rs  rule_modified.rs  tag_created.rs  tag_modified.rs  transaction_added.rs  transaction_connected.rs  transaction_ignored.rs  transaction_tagged.rs  transaction_untagged.rs  transfer_pair_rejected.rs
api/src/handlers/: budget.rs  budget_plan.rs  mod.rs
api/src/handlers/auth/: mod.rs
api/src/handlers/budget/: budget.rs  budget_item.rs  budget_plan.rs  mod.rs
api/src/handlers/import/: mod.rs
api/src/handlers/index/: mod.rs
api/src/handlers/members/: mod.rs
api/src/handlers/posts/: mod.rs
api/src/import/: mod.rs
api/src/migrations/: mod.rs
api/src/models/: actual_item.rs  bank_transaction.rs  bank_transaction_store.rs  budget.rs  budget_category.rs  budget_item.rs  budget_item_periodicity.rs  budget_item_store.rs  budget_item_tests.rs  budget_period.rs  budget_period_id.rs  budget_period_store.rs  budget_transaction.rs  budget_transaction_type.rs  budget_v2.rs  budget_v3.rs  budgeting_type.rs  match_rule.rs  mod.rs  money.rs  month_begins_on.rs  rule_packages.rs  tag.rs  transaction_allocation.rs  user.rs
api/src/tests/: mod.rs
api/src/view_models/: allocation_view_model.rs  budget_item_status.rs  budget_item_view_model.rs  budget_view_model.rs  budgeting_type_overview.rs  mod.rs  period_summary.rs  rule.rs  tag_summary.rs  transaction_view_model.rs  value_kind.rs
api/tests/: budget_item_amounts.rs  budget_item_tests.rs  budget_tests.rs  mod.rs
cqrs_macros/: Cargo.toml
database/: Cargo.toml
desktop/: Cargo.toml
desktop/assets/: main.css
desktop/src/: main.rs
desktop/src/views/: blog.rs  budgets.rs  home.rs
docs/: better-budgeting.md  budget-planning.md  postgresql.md  roadmap.md  running-deficit-surplus.md
dx_budgets/: Cargo.toml  data.json  data.ron  run_dioxus.sh
dx_budgets/api/: Cargo.toml
dx_budgets/api/src/: lib.rs
dx_budgets/api/src/migrations/: m20250701150318_create_table_users.rs  m20250710145549_create_table_budgets.rs  m20250710145616_create_table_budget_items.rs  m20250721110153_create_table_add_transactions.rs  m20250721110153_create_table_budget_transactions.rs  m20250726123221_create_table_add_budget_item_type_to_budget_items.rs  m20250726123221_create_table_add_item_type_to_budget_items.rs  mod.rs
dx_budgets/api/src/models/: bank_transaction.rs  budget.rs  budget_item.rs  budget_transaction.rs  mod.rs  user.rs
dx_budgets/desktop/: Cargo.toml
dx_budgets/desktop/src/: main.rs
dx_budgets/desktop/src/views/: budgets.rs  home.rs  mod.rs  new_budget_item.rs
dx_budgets/mobile/: Cargo.toml
dx_budgets/ui/: Cargo.toml
dx_budgets/ui/src/: echo.rs  lib.rs  users.rs
dx_budgets/ui/src/budget/: budget_hero.rs  budget_item.rs  budget_overview.rs  mod.rs
dx_budgets/web/: Cargo.toml
dx_budgets/web/src/: main.rs
entities/: Cargo.toml  bank_transactions.rs  budget_plan.rs  budget_plan_item.rs  episodes.rs  import_rows.rs  imports.rs  member_events.rs  members.rs  mod.rs  posts.rs  prelude.rs  users.rs
frontend/: index.js  package-lock.json  package.json  postcss.config.js  rspack.config.mjs
mobile/: Cargo.toml
mobile/src/: main.rs
mobile/src/views/: home.rs
service/: Cargo.toml
service/src/: mutation_core.rs  query_core.rs
ui/: Cargo.toml  EXAMPLE_VARIANT_SWITCHER.rs  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  UI_VARIANTS.md  VISUAL_COMPARISON.md
ui/assets/styling/: budget-hero-a.css  budget-hero-b.css  budget-hero.css  budget.css  collapsible.css  create-budget-items.css  echo.css  hero.css  navbar.css  retag-transactions.css  rules.css  tag-transactions.css  tags.css
ui/src/: hero.rs  lib.rs  users.rs
ui/src/budget/: bork.rs  budget_group_view.rs  budget_groups.rs  budget_hero.rs  budget_item.rs  budget_item_status_view.rs  budget_item_view.rs  budget_overview.rs  budget_popover.rs  budget_tabs.rs  budgeting_type_card.rs  budgeting_type_overview_view.rs  budgeting_type_tabs.rs  create_budget_items_view.rs  item_selector.rs  mod.rs  new_budget_item.rs  retag_transactions_view.rs  rules_view.rs  tag_transactions_view.rs  tags_view.rs  transactions_view.rs
ui/src/budget_a/: budget_hero.rs  budgeting_type_card.rs  mod.rs  transactions_view.rs
ui/src/budget_b/: budget_hero.rs  budgeting_type_card.rs  transactions_view.rs
ui/src/budget_components/: mod.rs
ui/src/budget_components/accordion/: mod.rs  style.css
ui/src/budget_components/button/: mod.rs
ui/src/budget_components/collapsible/: mod.rs
ui/src/budget_components/input/: mod.rs
ui/src/budget_components/separator/: mod.rs
ui/src/budget_components/tabs/: mod.rs  style.css
ui/src/components/: mod.rs
ui/src/components/accordion/: mod.rs
ui/src/components/collapsible/: mod.rs
ui/src/components/dialog/: mod.rs  style.css
ui/src/components/input/: mod.rs
ui/src/components/popover/: mod.rs  style.css
ui/src/components/select/: mod.rs  style.css
ui/src/components/separator/: mod.rs
ui/src/components/tabs/: mod.rs  style.css
ui/src/file_chooser/: mod.rs
web/: Cargo.toml
web/assets/: main.css
web/src/: main.rs
web/src/views/: home.rs
(+106 files in other folders)
