[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api", "cqrs_macros",
]

[workspace.dependencies]
dioxus = { version = "0.7.0-rc.2", features = ["fullstack"] }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components" }
#lucide-dioxus = { version = "2.15.0", features = ["all-icons"] }
uuid = { version = "1.18.1", features = ["v4", "js", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145" }
anyhow = "1.0.100"
joydb = { version = "0.1.0", features = ["json"] }
strum = { version = "0.27.2", features = ["derive"] }


# workspace
ui = { path = "ui" }
api = { path = "api" }
cqrs_macros = { path = "cqrs_macros" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
