[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api", "cqrs_macros",
]

[workspace.dependencies]
dioxus = { version = "0.7.4", features = ["fullstack"] }
lucide-dioxus = { version = "2.577.0", features = ["all-icons"] }
uuid = { version = "1.23.0", features = ["v4", "js", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
thiserror = "2.0.18"
joydb = { version = "0.1.0", features = ["json"] }
strum = { version = "0.28.0", features = ["derive"] }
env = "1.0.1"

# workspace
ui = { path = "ui" }
api = { path = "api" }
cqrs_macros = { path = "cqrs_macros" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
