[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tokio = { version = "1.48.0", features = ["full"], optional = true }
uuid = { workspace = true, features = ["v4", "js", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
anyhow = { workspace = true }
joydb = { features = ["ron"], workspace = true }
once_cell = { version = "1.21.3", features = ["parking_lot"] }
cqrs_macros = { workspace = true }
calamine = "0.32.0"
strum_macros = "0.27.2"
strum = { workspace = true, features = ["derive"] }
sum = "0.1.7"
duration-extender = "0.5.0"
iter_tools = "0.43.0"

[features]
server = ["dioxus/server", "tokio"]
