[package]
name = "database"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono.workspace = true
dotenvy = "0.15.7"
log = "0.4.29"
pretty_env_logger = "0.5.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "tls-rustls", "uuid", "chrono"] }
tokio = { version = "1.52.1", features = ["rt-multi-thread", "macros"] }
uuid = { workspace = true, features = ["v4", "serde"] }
welds = { version = "0.4.21", features = ["migrations", "postgres", "sqlite"] }
