[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true, optional = true, features = ["server"] }
lucide-dioxus = {workspace = true, features = ["all-icons"] }
uuid = { workspace = true, features = ["v4", "js", "serde"] }
serde = { workspace = true, features = ["derive"] }
chrono = "0.4.41"

[features]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "api"]
