[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true, optional = true, features = ["server"] }


[features]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "api"]
