[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
]

[workspace.dependencies]
dioxus = "0.6.3"

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
