[workspace]
resolver = "2"
members = [
    "ui",
    "web",
    "desktop",
    "mobile",
    "api",
]

[workspace.dependencies]
dioxus = "0.6.3"
lucide-dioxus = { version = "2.15.0", features = ["all-icons"] }
uuid = { version = "1.1.2", features = ["v4", "js", "serde"] }
chrono = { version="0.4.41", features = ["serde"] }
serde = { version = "1.0.188", features = ["derive"] }
anyhow = "1.0.98"
joydb = { version = "0.1.0", features = ["json"] }

# workspace
ui = { path = "ui" }
api = { path = "api" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
