[package]
name = "mobile"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
ui = { workspace = true }
api = { workspace = true, features = ["server"], optional = true }

[features]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "api"]
