#cargo-features = ["codegen-backend"]

[package]
name = "service"
version = "0.1.0"
edition = "2024"
[lib]
name = "service"
path = "src/lib.rs"

[dependencies]
entities = { path = "../entities" }
sea-orm = { version = "1.1.8", features = ["runtime-tokio-rustls", "sqlx-sqlite", "sqlx-postgres", "with-rust_decimal"] }
