[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true }
dioxus-primitives = { workspace = true }
api = { workspace = true }
uuid = { workspace = true  }
strum = { workspace = true }
chrono = {workspace = true}
lucide-dioxus = { workspace = true }

[features]
server = ["api/server"]
