[package]
name = "ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { workspace = true }
dioxus-primitives = { git = "https://github.com/DioxusLabs/components", version = "0.0.1", default-features = false }
api = { workspace = true }
uuid = { workspace = true  }
strum = { workspace = true }
chrono = {workspace = true}
lucide-dioxus = { workspace = true }
rfd = "0.15"

[features]
server = ["api/server"]
