[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true, optional = true, features = ["server"] }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "api"]
