[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
welds = { version = "0.4.16", features = ["sqlite", "migrations"], optional = true }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls","tls-rustls", "sqlite", "chrono", "uuid"], optional = true }
once_cell = { version="1.21.3", optional = true }
tokio = { version="1.46.0", features = ["full"], optional = true } 
uuid = { version = "1.1.2", features = ["v4"] }
chrono = "0.4.41"

[features]
default = []
server = ["once_cell", "welds", "sqlx", "tokio"]
