[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
tokio = { version = "1.46.0", features = ["full"], optional = true }
uuid = { workspace = true, features = ["v4", "js", "serde"] }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
joydb = { features = ["json"], workspace = true }

[features]
web = []
desktop = []
mobile = []
server = ["tokio"]
