[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
dioxus-provider = { workspace = true }
ui = { workspace = true }
api = { workspace = true, features = ["server"], optional = true }

[features]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "api"]
