[package]
name = "desktop"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true, features = ["server"], optional = true }
lucide-dioxus = {workspace = true, features = ["all-icons"] }

[features]
desktop = ["dioxus/desktop"]
server = ["dioxus/server", "api"]
