[package]
name = "ui"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { features= ["router", "fullstack"], workspace = true }
api = { workspace = true }
uuid = { version = "1.17.0", features = ["v4"] }
lucide-dioxus = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
