[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router"] }
ui = { workspace = true }
api = { workspace = true, features = ["server"], optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "api"]
